MAPREDUCE-6304. Specifying node labels when submitting MR jobs. Contributed by Naganarasimha G R. Backport by Inigo Goiri.
(cherry picked from commit 3164e7d83875aa6b7435d1dfe61ac280aa277f1c)

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -6,6 +6,9 @@ Release 2.7.4 - UNRELEASED
 
   NEW FEATURES
 
+    MAPREDUCE-6304. Specifying node labels when submitting MR jobs.
+    (Naganarasimha G R. Backport by Inigo Goiri)
+
   IMPROVEMENTS
 
     MAPREDUCE-6741. Add MR support to redact job conf properties. (Haibo Chen
