Update CHANGES.txt for YARN-6493
Change-Id: I61fbb26c4e7abb5ee4817856eb7c65f072e9d764

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -14,6 +14,9 @@ Release 2.7.4 - UNRELEASED
     YARN-4109. Exception on RM scheduler page loading with labels.
     (Mohammad Shahid Khan via rohithsharmaks)
 
+    YARN-6493. Print requested node partition in assignContainer logs. 
+    (Jonathan Hung via wangda)
+
   OPTIMIZATIONS
 
     YARN-5262. Optimize sending RMNodeFinishedContainersPulledByAMEvent for
