HDFS-11864. Document Metrics to track usage of memory for writes. Contributed by Yiqun Lin.
(cherry picked from commit 52661e0912a79d1e851afc2b46c941ce952ca63f)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -309,6 +309,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-11849. JournalNode startup failure exception should be logged in log file.
     (Contributed By Surendra Singh Lilhore via Brahma Reddy Battula)
 
+    HDFS-11864. Document Metrics to track usage of memory for writes.
+    (Contributed by Yiqun Lin via Brahma Reddy Battula)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
