Fix NPE in LazyPersistFileScrubber. Contributed by Inigo Goiri.
(cherry picked from commit 303c8dc9b6c853c0939ea9ba14388897cc258071)

Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/src/main/java/org/apache/hadoop/hdfs/server/namenode/FSNamesystem.java

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -326,6 +326,8 @@ Release 2.7.4 - UNRELEASED
     HDFS-11445. FSCK shows overall health stauts as corrupt even one replica is corrupt. 
     (Brahma Reddy Battula)
 
+    Fix NPE in LazyPersistFileScrubber. (Inigo Goiri via shv)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
