HDFS-11741. Long running balancer may fail due to expired DataEncryptionKey. Contributed by Wei-Chiu Chuang and Xiao Chen.
(cherry picked from commit 068e23b896c63b0f817e6b91d73c994be1551eb2)

Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/src/main/java/org/apache/hadoop/hdfs/security/token/block/BlockTokenSecretManager.java
(cherry picked from commit 6f2391e0ad6fbaa6786cc9f0e3a09b955e0cb21c)

(cherry picked from commit ec10a81bdbc4f5799ae40cd9fe5f6109dfbfa9ae)

Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/src/main/java/org/apache/hadoop/hdfs/security/token/block/BlockTokenSecretManager.java

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -367,6 +367,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-11583. Parent spans are not initialized to NullScope for every
     DFSPacket. (Masatake Iwasaki via aajisaka)
 
+    HDFS-11741. Long running balancer may fail due to expired DataEncryptionKey.
+        Contributed by Wei-Chiu Chuang and Xiao Chen.
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
