HADOOP-14474. Use OpenJDK 7 instead of Oracle JDK 7 to avoid oracle-java7-installer failures. Contributed by Akira Ajisaka.
(cherry picked from commit 5e40efe0ec38f1e1228846a5448d93bf040868ff)
(cherry picked from commit d946387850ae2fe383df90dd2722560986236e31)

Conflicts:
	dev-support/docker/Dockerfile

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -154,6 +154,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-7851. Configuration.getClasses() never returns the default value. 
     (Uma Maheswara Rao G via amarrk)
 
+    HADOOP-14474. Use OpenJDK 7 instead of Oracle JDK 7 to avoid
+    oracle-java7-installer failures. (Akira Ajisaka via xiao)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
