--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -16,6 +16,9 @@ Release 2.6.6 - UNRELEASED
 
     HADOOP-13433 Race in UGI.reloginFromKeytab. (Duo Zhang via xiao)
 
+    HADOOP-14474. Use OpenJDK 7 instead of Oracle JDK 7 to avoid
+    oracle-java7-installer failures. (Akira Ajisaka via xiao)
+
 Release 2.6.5 - 2016-10-08
 
   INCOMPATIBLE CHANGES
