HADOOP-14440. Add metrics for connections dropped. Contributed by Eric Badger.
(cherry picked from commit abdd609e51a80388493417126c3bc9b1badc0ac1)
(cherry picked from commit 9854682ea46006d98b6d865739b228db804c72ca)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -39,6 +39,8 @@ Release 2.7.4 - UNRELEASED
     HADOOP-11703. git should ignore .DS_Store files on Mac OS X (Abin Shahab
     via aw)
 
+    HADOOP-14440. Add metrics for connections dropped. (Eric Badger via kihwal)
+
   OPTIMIZATIONS
 
     HADOOP-14138. Remove S3A ref from META-INF service discovery, rely on
