YARN-1471. Preserve scheduler typeinfo in simulator to work with resource monitors. Contributed by Carlo Curino. Backport by Ye Zhou.
(cherry picked from commit e07f3c87cd3542760efcf713f909375b69eec00f)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -112,6 +112,9 @@ Release 2.7.4 - UNRELEASED
     YARN-4250. NPE in AppSchedulingInfo#isRequestLabelChanged.
     (Brahma Reddy Battula via rohithsharmaks)
 
+    YARN-1471. The SLS simulator is not running the preemption policy
+    for CapacityScheduler (Carlo Curino via cdouglas) Backport by Ye Zhou.
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
