HDFS-11345. Document the configuration key for FSNamesystem lock fairness. Contributed by Erik Krogen.
(cherry picked from commit 2c769167dbdb66c52d2ba7b7193a686444085570)
(cherry picked from commit 6b3c13d543ddaba3b4a2e6a5649420982a107603)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -139,6 +139,9 @@ Release 2.7.4 - UNRELEASED
 
     HDFS-8674. Improve performance of postponed block scans. (Daryn Sharp)
 
+    HDFS-11345. Document the configuration key for FSNamesystem lock
+    fairness. (Erik Krogen via aajisaka)
+
   BUG FIXES
    
     HDFS-8307. Spurious DNS Queries from hdfs shell. (Andres Perez via aengineer)
