--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -44,6 +44,9 @@ Release 2.7.4 - UNRELEASED
     MAPREDUCE-6697. Concurrent task limits should only be applied when
     necessary. (Nathan Roberts via shv).
 
+    MAPREDUCE-6711. JobImpl fails to handle preemption events on state
+    COMMITTING. (Prabhu Joseph via Junping Du)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
