--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -394,6 +394,8 @@ Release 2.7.4 - UNRELEASED
     HDFS-12177. NameNode exits due to setting BlockPlacementPolicy loglevel to Debug.
     (Jiandan Yang via Brahma Reddy Battula)
 
+    HDFS-11742. Improve balancer usability after HDFS-8818. (kihwal)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
