HDFS-11896. Non-dfsUsed will be doubled on dead node re-registration. Contributed by Brahma Reddy Battula.
(cherry picked from commit c4a85c694fae3f814ab4e7f3c172da1df0e0e353)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -396,6 +396,9 @@ Release 2.7.4 - UNRELEASED
 
     HDFS-11742. Improve balancer usability after HDFS-8818. (kihwal)
 
+    HDFS-11896. Non-dfsUsed will be doubled on dead node re-registration.
+    (Brahma Reddy Battula via shv)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
