HADOOP-14702. Fix formatting issue and regression caused by conversion from APT to Markdown. Contributed by Doris Gu.
(cherry picked from commit d9a07b39046c323d430b98eff6603eaf58e18372)

Conflicts:
	hadoop-common-project/hadoop-common/src/site/markdown/Metrics.md

(cherry picked from commit a01d92156d9a7bf008374c04786d37aabad3f3b6)

Conflicts:
	hadoop-common-project/hadoop-common/src/site/markdown/Metrics.md

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -12,6 +12,9 @@ Release 2.7.5 - UNRELEASED
 
   BUG FIXES
 
+    HADOOP-14702. Fix formatting issue and regression caused by conversion from
+    APT to Markdown. (Doris Gu via iwasakims)
+
 Release 2.7.4 - UNRELEASED
 
   INCOMPATIBLE CHANGES
