HDFS-12131. Add some of the FSNamesystem JMX values as metrics. Contributed by Erik Krogen.
(cherry picked from commit f4c6b00a9f48ae7667db4035b641769efc3bb7cf)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -12,6 +12,9 @@ Release 2.7.5 - UNRELEASED
 
     HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)
 
+    HDFS-12131. Add some of the FSNamesystem JMX values as metrics.
+    (Erik Krogen via wang, shv)
+
   OPTIMIZATIONS
 
   BUG FIXES
