--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -1,6 +1,18 @@
 Hadoop MapReduce Change Log
 
-Release 2.7.4 - UNRELEASED
+Release 2.7.5 - UNRELEASED
+
+  INCOMPATIBLE CHANGES
+
+  NEW FEATURES
+
+  IMPROVEMENTS
+
+  OPTIMIZATIONS
+
+  BUG FIXES
+
+Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
 
