--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -12,6 +12,9 @@ Release 2.7.5 - UNRELEASED
 
   BUG FIXES
 
+    MAPREDUCE-6931. Remove TestDFSIO "Total Throughput" calculation.
+    (Dennis Huo via shv)
+
 Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
