--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -18,6 +18,9 @@ Release 2.7.5 - UNRELEASED
     MAPREDUCE-6750. Fix TestHSAdminServer#testRefreshSuperUserGroups
     (Kihwal Lee via Varun Saxena)
 
+    MAPREDUCE-6957. shuffle hangs after a node manager connection timeout.
+    (Jooseong Kim via jlowe)
+
 Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
