--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -12,6 +12,10 @@ Release 2.7.5 - UNRELEASED
 
   BUG FIXES
 
+    YARN-5195. RM intermittently crashed with NPE while handling
+    APP_ATTEMPT_REMOVED event when async-scheduling enabled in
+    CapacityScheduler. (sandflee and Jonathan Hung via jlowe)
+
 Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
