HDFS-9740. Use a reasonable limit in DFSTestUtil.waitForMetric() (Contributed by Chang Li)
(cherry picked from commit eb2fb943fd97c191fd7c4f5333087a28ee5c87d8)

 Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/src/test/java/org/apache/hadoop/hdfs/DFSTestUtil.java

(cherry picked from commit 6941e2ccbf6f4c7c8663a68c7a7c9ed59bb49fbf)

 Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/src/test/java/org/apache/hadoop/hdfs/DFSTestUtil.java

(cherry picked from commit af9de19cfd7f3ad0d2d075bf79efdcee46868ca1)

 Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -23,6 +23,9 @@ Release 2.6.6 - UNRELEASED
 
     HDFS-9072. Fix random failures in TestJMXGet (J.Andreina via kihwal)
 
+    HDFS-9740. Use a reasonable limit in DFSTestUtil.waitForMetric()
+    (Chang Li via vinayakumarb)
+
 Release 2.6.5 - 2016-10-08
 
   INCOMPATIBLE CHANGES
