HDFS-9743. Fix TestLazyPersistFiles#testFallbackToDiskFull in branch-2.7. Contributed by Kihwal Lee.
(cherry picked from commit dd11c8274dede96a7687cc48edee5df8aa65c9b4)

Conflicts:
	hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -28,6 +28,8 @@ Release 2.6.6 - UNRELEASED
 
     HDFS-10270. TestJMXGet:testNameNode() fails. Contributed by Gergely Novák.
 
+    HDFS-9743. Fix TestLazyPersistFiles#testFallbackToDiskFull (kihwal)
+
 Release 2.6.5 - 2016-10-08
 
   INCOMPATIBLE CHANGES
